update and fix grammar of graphics notebook

--- a/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
+++ b/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
@@ -160,10 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Import gapminder data into the variable gapminder\n"
+    "# Import gapminder data into the variable gapminder\n",
+    "gapminder = pd.read_csv(\"../../data/gapminder.tab\", sep=\"\\t\")"
    ]
   },
   {
@@ -188,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Peek at the gapminder data\n"
@@ -215,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use qplot to produce a basic scatterplot of gapminder data\n"
+    "# Use qplot to produce a basic scatterplot of gapminder data\n",
+    "qplot('lifeExp', 'gdpPercap', data=gapminder, color='continent')"
    ]
   },
   {
@@ -365,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create the plot base layer\n"
@@ -393,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use a geom_point() to produce a scatterplot\n"
@@ -415,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add the geom_point() to the base plot in p, and render the whole scatterplot\n"
@@ -444,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add axis labels and a title to the plot\n"
@@ -460,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer challenge in this cell\n"
@@ -501,7 +517,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Render a line plot with geom_line()\n"
@@ -524,7 +542,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -545,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Stack a geom_point() on a geom_line() for the gapminder data\n"
@@ -566,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Redraw the stacked plot, with black datapoints\n"
@@ -598,7 +622,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot GDP against life expectancy\n"
@@ -621,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Replot the data with a log y-axis\n"
@@ -652,7 +680,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Replot the log-transformed data with a Brewer colour scale\n"
@@ -688,7 +718,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot smoothed curves by continent for life expectancy over time\n"
@@ -711,7 +743,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot smoothed curves by continent for life expectancy over time\n"
@@ -747,7 +781,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -770,7 +806,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Group datapoints by country, and render a line plot\n"
@@ -800,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a facet plot by year of gdpPercap vs lifeExp, coloured by continent\n"
@@ -824,7 +864,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a facet plot by year and continent, of gdpPercap vs lifeExp since 1980, coloured by continent\n"
@@ -856,7 +898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
