--- a/exercises/colormaps_surfaces_netcdf/colormaps_surfaces_netcdf.ipynb
+++ b/exercises/colormaps_surfaces_netcdf/colormaps_surfaces_netcdf.ipynb
@@ -145,8 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "# Define the location of the input NetCDF4 data\n",
-    "infile = \"../../data/GMRTv3_2_20160710CF.grd\""
+    "# Define the location of the input NetCDF4 data\n"
    ]
   },
   {
@@ -169,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load the NetCDF dataset as the variable `dataset`\n"
@@ -182,20 +183,22 @@
     "All NetCDF variables are contained in the `.variables` attribute of the dataset:\n",
     "\n",
     "```python\n",
-    "data.variables\n",
+    "dataset.variables\n",
     "```\n",
     "\n",
     "This is accessed like any other dictionary:\n",
     "\n",
     "```python\n",
-    "data.variables['lat']\n",
+    "dataset.variables['lat']\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the dataset's variables\n"
@@ -237,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the dataset's variable datatype\n"
@@ -303,11 +308,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run the pylab magic in this cell.\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -335,7 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use this cell to obtain help for the imshow() function\n",
@@ -349,8 +363,8 @@
     "You can obtain a default image representation of the data in `data.variables['altitude']` using `imshow()` - and an accompanying `colorbar` to aid interpretation - with:\n",
     "\n",
     "```python\n",
-    "imshow(data.variables['altitude'].data, origin='lower')\n",
-    "colorbar()\n",
+    "plt.imshow(data.variables['altitude'].data, origin='lower')\n",
+    "plt.colorbar()\n",
     "```\n",
     "\n",
     "<div class=\"alert alert-danger\">\n",
@@ -377,10 +391,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, prior to V2.0, `matplotlib` uses the colormap `rainbow`. Post v2.0, the `viridis` colormap will be used. We can get a sneak preview of how this image would appear in v2.0+ of `matplotlib`, by specifying the colormap `'viridis'` when we call `imshow()`:\n",
+    "By default, prior to V2.0, `matplotlib` used the colormap `rainbow`. Before this, the `rainbow` colormap was used. We can see how this image would appear in earlier versions of `matplotlib`, by specifying the colormap `'rainbow'` when we call `imshow()`:\n",
     "\n",
     "```python\n",
-    "imshow(data.variables['altitude'].data, origin='lower', cmap='viridis')\n",
+    "plt.imshow(data.variables['altitude'].data, origin='lower', cmap='rainbow')\n",
     "```"
    ]
   },
@@ -502,13 +516,13 @@
     "    nrows = 1 + (len(cmaps) // 3)  # // is integer division\n",
     "    if not len(cmaps) % 3:  # Correct number of rows for multiples of 3\n",
     "        nrows -= 1\n",
-    "    fig, axes = subplots(nrows=nrows, ncols=3, figsize=(15, nrows * 5))\n",
-    "    subplots_adjust(wspace=0.3, hspace=0.1)  # Allow space for colorbar scales\n",
+    "    fig, axes = plt.subplots(nrows=nrows, ncols=3, figsize=(15, nrows * 5))\n",
+    "    plt.subplots_adjust(wspace=0.3, hspace=0.1)  # Allow space for colorbar scales\n",
     "    \n",
     "    # Create one subplot per colormap\n",
     "    for idx, cmap in enumerate(cmaps):\n",
     "        # cm.cmap_d contains a dictionary of allowed colormaps\n",
-    "        assert cmap in cm.cmap_d, \"colormap %s is not recognised\" % cmap\n",
+    "        assert cmap in plt.cm.cmap_d, \"colormap %s is not recognised\" % cmap\n",
     "        # Identify the axis to draw on\n",
     "        row, col = (idx // 3, idx % 3)\n",
     "        if len(cmaps) > 3:\n",
@@ -521,7 +535,7 @@
     "        # Draw a colorbar scale next to the image data\n",
     "        div = make_axes_locatable(ax)  # link to data image axis\n",
     "        cax = div.append_axes(\"right\", size=\"5%\", pad=0.05)  # define axis for scale\n",
-    "        colorbar(img, cax=cax)  # draw scale\n",
+    "        plt.colorbar(img, cax=cax)  # draw scale\n",
     "        \n",
     "    # Remove unused axes\n",
     "    for i in range(idx + 1, 3 * nrows):\n",
@@ -613,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use compare_colormaps() to visualise qualitative colormaps in this cell\n"
@@ -648,7 +664,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use compare_colormaps() to visualise miscellaneous colormaps in this cell\n"
@@ -689,7 +707,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the data with topological colormaps, here\n"
@@ -726,9 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Code defining three classes for normalising our data to\n",
@@ -784,8 +802,8 @@
     "norm = OceanNormalize(vmin=data.variables['altitude'].actual_range[0],\n",
     "                      vmax=data.variables['altitude'].actual_range[1],\n",
     "                      sealevel=0)\n",
-    "imshow(data.variables['altitude'].data, origin='lower', cmap='ocean', norm=norm)\n",
-    "colorbar()\n",
+    "plt.imshow(data.variables['altitude'].data, origin='lower', cmap='ocean', norm=norm)\n",
+    "plt.colorbar()\n",
     "```\n",
     "\n",
     "This should render the image with a more familiar colour scheme."
@@ -851,12 +869,12 @@
     "* `linspace`: [documentation](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html)\n",
     "\n",
     "```python\n",
-    "x = linspace(data.variables['lon'].actual_range[0],\n",
-    "             data.variables['lon'].actual_range[1],\n",
-    "             data.variables['lon'].shape[0])\n",
-    "y = linspace(data.variables['lat'].actual_range[0],\n",
-    "             data.variables['lat'].actual_range[1],\n",
-    "             data.variables['lat'].shape[0])\n",
+    "x = np.linspace(data.variables['lon'].actual_range[0],\n",
+    "                data.variables['lon'].actual_range[1],\n",
+    "                data.variables['lon'].shape[0])\n",
+    "y = np.linspace(data.variables['lat'].actual_range[0],\n",
+    "                data.variables['lat'].actual_range[1],\n",
+    "                data.variables['lat'].shape[0])\n",
     "```\n",
     "\n",
     "To get minimum and maximum values for each variable we have used the `.actual_range` attribute, which returns a `(min, max)` tuple for a `netcdf_variable` object. We have also used the `.shape` attribute (which returns a tuple of dimensions of the data) to determine the number of steps we need to define in linear space.\n",
@@ -886,7 +904,7 @@
     "The next step is to create a 2D *grid* or *mesh* combining these values, so that each `(lon, lat)` tuple corresponds to a single point in the `altitude` dataset. We use `NumPy`'s `meshgrid` command to do this, placing the output into `xgrid` and `ygrid` - *x* and *y* co-ordinates for each point in `data.variables['altitude']`:\n",
     "\n",
     "```python\n",
-    "xgrid, ygrid = meshgrid(x, y)\n",
+    "xgrid, ygrid = np.meshgrid(x, y)\n",
     "```\n",
     "\n",
     "The properties of these arrays can be inspected:\n",
@@ -922,7 +940,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create the convenience variable z that holds the altitude data\n"
@@ -937,7 +957,7 @@
     "To render a basic 3D plot, we will create a `matplotlib` `Figure`, to which we will add a `subplot` (referred to as our *axes*, and assigned to `ax`). We need to tell the `subplot` that we want a 3D projection of the data, and then call the `ax.plot_surface()` function to draw the surface, as the object `surf` (this allows us to refer to elements of the surface):\n",
     "\n",
     "```python\n",
-    "fig = figure()  # The figure() holds the axes\n",
+    "fig = plt.figure()  # The figure() holds the axes\n",
     "ax = fig.add_subplot(111, projection='3d')  # The subplot is the axes\n",
     "surf = ax.plot_surface(xgrid, ygrid, z) # We provide x,y meshgrid locations and z co-ords\n",
     "```"
@@ -959,7 +979,7 @@
     "This is a pretty uninspiring plot. It's just a small, dark surface, and we can't see any detail. We can try increasing the size of the figure, by passing `figsize=(20, 15)` as an argument to `figure()` when creating the plot:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))  # Set figure size\n",
+    "fig = plt.figure(figsize=(20, 15))  # Set figure size\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "surf = ax.plot_surface(xgrid, ygrid, z)\n",
     "```"
@@ -985,7 +1005,7 @@
     "We can try removing the lines to see what effect this have. We can also subsample the surface less finely, in order to see clearly what's going on with the faces. To do this, we set `linewidth=0`, and `cstride` and `rstride` to skip 100 values in each direction, in our call to `plot_surface()`:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       cstride=100, rstride=100,  # Skip by 100 datapoints on each axis\n",
@@ -1009,7 +1029,7 @@
     "Now we can see only the faces of the surface plot, but it's not very clear, still. It's possible to add a colormap with the `cmap` and `norm` arguments to `plot_surface()`, just as for 2D plots. But, when we try this with the `cm.gist_earth` colormap, the results are disappointing:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "norm_ge = TerrainNormalize(vmin=z.min(), vmax=z.max(), sealevel=0)  # Normalisation for colormap\n",
@@ -1017,7 +1037,7 @@
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
     "                       cstride=100, rstride=100,\n",
-    "                       cmap=cm.gist_earth, norm=norm_ge)  # Use colormap and normalise\n",
+    "                       cmap=plt.cm.gist_earth, norm=norm_ge)  # Use colormap and normalise\n",
     "```"
    ]
   },
@@ -1037,16 +1057,16 @@
     "The problem we have here is that our data array, `z`, contains non-numeric values: `nan`s, as can be seen by inspection with `print(z)`. Rather than using `z.max()` and `z.min()`, which return `nan` as both the minimum and maximum data values for scaling, we need to use the `NumPy` functions `nanmin()` and `nanmax()` to ignore those values.\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "# Normalisation for colormap: ignore NaNs in data!\n",
-    "norm_ge = GIST_EarthNormalize(vmin=nanmin(z), vmax=nanmax(z), sealevel=0)\n",
+    "norm_ge = GIST_EarthNormalize(vmin=np.nanmin(z), vmax=np.nanmax(z), sealevel=0)\n",
     "\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
     "                       cstride=100, rstride=100,\n",
-    "                       cmap=cm.gist_earth, norm=norm_ge)\n",
+    "                       cmap=plt.cm.gist_earth, norm=norm_ge)\n",
     "```"
    ]
   },
@@ -1066,15 +1086,15 @@
     "Reducing the number of values in the dataset we skip by reducing the values for `cstride` and `rstride` from 100 to 5, more detail can be shown.\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
-    "norm_ge = GIST_EarthNormalize(vmin=nanmin(z), vmax=nanmax(z), sealevel=0)\n",
+    "norm_ge = GIST_EarthNormalize(vmin=np.nanmin(z), vmax=np.nanmax(z), sealevel=0)\n",
     "\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
     "                       cstride=5, rstride=5,  # Show more detail\n",
-    "                       cmap=cm.gist_earth, norm=norm_ge)\n",
+    "                       cmap=plt.cm.gist_earth, norm=norm_ge)\n",
     "```"
    ]
   },
@@ -1096,16 +1116,16 @@
     "The axes can be rotated with `ax.view_init()`, passing the angle above the horizon, and the bearing from which we view the axes, to give a clearer view of the map:\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.view_init(60, 245)  # Rotate axes (245deg) and change elevation (60deg)\n",
     "\n",
-    "norm_ge = GIST_EarthNormalize(vmin=nanmin(z), vmax=nanmax(z), sealevel=0)\n",
+    "norm_ge = GIST_EarthNormalize(vmin=np.nanmin(z), vmax=np.nanmax(z), sealevel=0)\n",
     "\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
     "                       cstride=5, rstride=5,\n",
-    "                       cmap=cm.gist_earth, norm=norm_ge)\n",
+    "                       cmap=plt.cm.gist_earth, norm=norm_ge)\n",
     "```"
    ]
   },
@@ -1132,18 +1152,18 @@
     "We can add a colorbar scale with the `colorbar()` function, just as for 2D plots. We need to tell it what the graph surface is so that it can relate datapoint values to colours, and it can help to `shrink` the scale so it does not dominate the plot.\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.view_init(60, 245)\n",
     "\n",
-    "norm_ge = GIST_EarthNormalize(vmin=nanmin(z), vmax=nanmax(z), sealevel=0)\n",
+    "norm_ge = GIST_EarthNormalize(vmin=np.nanmin(z), vmax=np.nanmax(z), sealevel=0)\n",
     "\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
     "                       cstride=5, rstride=5,\n",
-    "                       cmap=cm.gist_earth, norm=norm_ge)\n",
+    "                       cmap=plt.cm.gist_earth, norm=norm_ge)\n",
     "\n",
-    "colorbar(surf, shrink=0.5)  # Add a colorbar scale\n",
+    "plt.colorbar(surf, shrink=0.5);  # Add a colorbar scale\n",
     "```"
    ]
   },
@@ -1169,14 +1189,14 @@
     "We could set also set `shade=True` and `antialiased=True` for a smoother rendering, if we liked.\n",
     "\n",
     "```python\n",
-    "fig = figure(figsize=(20, 15))\n",
+    "fig = plt.figure(figsize=(20, 15))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.view_init(60, 245)\n",
     "\n",
-    "norm_ge = GIST_EarthNormalize(vmin=nanmin(z), vmax=nanmax(z), sealevel=0)\n",
+    "norm_ge = GIST_EarthNormalize(vmin=np.nanmin(z), vmax=np.nanmax(z), sealevel=0)\n",
     "\n",
     "ls = mpl.colors.LightSource(azdeg=315, altdeg=45)  # Create light source\n",
-    "rgb = ls.shade(z, cmap=cm.gist_earth, norm=norm_ge)  # Add shader to colour datapoints\n",
+    "rgb = ls.shade(z, cmap=plt.cm.gist_earth, norm=norm_ge)  # Add shader to colour datapoints\n",
     "\n",
     "surf = ax.plot_surface(xgrid, ygrid, z,\n",
     "                       linewidth=0,\n",
@@ -1229,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
