fix and update interactive map notebook

--- a/exercises/interactive_bokeh_map/interactive_bokeh_map.ipynb
+++ b/exercises/interactive_bokeh_map/interactive_bokeh_map.ipynb
@@ -129,9 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import pyshp\n",
@@ -159,8 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "# Define the location of the boundary shapefile data\n",
-    "boundaryshp = \"../../data/England_lad_2011_gen_clipped/england_lad_2011_gen_clipped.shp\""
+    "# Define the location of the boundary shapefile data\n"
    ]
   },
   {
@@ -235,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer the question in this cell\n"
@@ -251,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer the question in this cell\n"
@@ -292,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the shape and record elements\n"
@@ -319,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the .parts attribute of some elements of the shapes list\n"
@@ -407,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer the question in this cell\n"
@@ -484,8 +491,7 @@
    },
    "outputs": [],
    "source": [
-    "# Define the location of the electoral data\n",
-    "votescsv = \"../../data/EU-referendum-result-data.csv\""
+    "# Define the location of the electoral data\n"
    ]
   },
   {
@@ -522,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load the electoral data into the variable df, list the column headers,\n",
@@ -532,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use the dataframe's head() method to inspect the first few rows\n"
@@ -569,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a list of Remain votes in the list variable region_remain\n"
@@ -585,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer the question in this cell\n"
@@ -664,8 +678,7 @@
     "from bokeh.palettes import RdYlBu10\n",
     "\n",
     "# Use the notebook for rendering, rather than opening a new tab\n",
-    "from bokeh.io import output_notebook\n",
-    "output_notebook()"
+    "from bokeh.io import output_notebook"
    ]
   },
   {
@@ -694,7 +707,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the RdYlBu10 palette\n"
@@ -734,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Inspect the first few elements of region_colors\n"
@@ -767,7 +784,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create the ColumnDataSource and assign it to the variable source\n"
@@ -822,7 +841,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Answer the question in this cell\n"
@@ -891,11 +912,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add a tooltip to the interactive plot, and render it again\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -914,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
