fix and update making_movies notebook

--- a/exercises/making_movies/making_movies.ipynb
+++ b/exercises/making_movies/making_movies.ipynb
@@ -87,11 +87,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
     "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "from matplotlib import animation\n",
     "import seaborn as sns\n",
@@ -153,7 +158,7 @@
     "Here, we will create the `figure()` object `fig`, and add subplot axes `ax` to describe the plot itself, setting *x*- and *y*-axis limits appropriate for a *sin* wave plot. So far, this is just like creating a static figure\n",
     "\n",
     "```python\n",
-    "fig = figure()\n",
+    "fig = plt.figure()\n",
     "ax = fig.add_subplot(1, 1, 1,\n",
     "                     xlim=(0, 2), ylim=(-2, 2))\n",
     "```\n",
@@ -177,12 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use this cell to create the clean base plot with the code above\n",
-    "fig = figure()\n",
-    "ax = fig.add_subplot(1, 1, 1,\n",
-    "                     xlim=(0, 2), ylim=(-2, 2))\n",
-    "line, = ax.plot([], [], lw=2)\n",
-    "text = ax.text(0, 1.75, '')"
+    "# Use this cell to create the clean base plot with the code above\n"
    ]
   },
   {
@@ -209,11 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create the function for init_func in this cell\n",
-    "def init_sine():\n",
-    "    line.set_data([], [])\n",
-    "    text.set_text('')\n",
-    "    return(line, text)"
+    "# Create the function for init_func in this cell\n"
    ]
   },
   {
@@ -226,8 +222,8 @@
     "\n",
     "```python\n",
     "def animate_sine(i):\n",
-    "    x = linspace(0, 2, 1000)\n",
-    "    y = sin(2 * pi * x)\n",
+    "    x = np.linspace(0, 2, 1000)\n",
+    "    y = np.sin(2 * np.pi * x)\n",
     "    line.set_data(x, y)\n",
     "    text.set_text('frame: {0}'.format(i))\n",
     "    return(line, text)\n",
@@ -239,16 +235,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Create the animate_sine() function in this cell\n",
-    "def animate_sine(i):\n",
-    "    x = linspace(0, 2, 1000)\n",
-    "    y = sin(2 * pi * x)\n",
-    "    line.set_data(x, y)\n",
-    "    text.set_text('frame: {0}'.format(i))\n",
-    "    return(line, text)"
+    "# Create the animate_sine() function in this cell\n"
    ]
   },
   {
@@ -270,12 +262,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Create the FuncAnimation object in this cell\n",
-    "anim = animation.FuncAnimation(fig, animate_sine, init_func=init_sine,\n",
-    "                               frames=100, interval=20, blit=True)"
+    "# Create the FuncAnimation object in this cell\n"
    ]
   },
   {
@@ -295,8 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Render the animation in this cell\n",
-    "HTML(anim.to_html5_video())"
+    "# Render the animation in this cell\n"
    ]
   },
   {
@@ -319,16 +310,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Change the animate_sine() function in this cell, and rerender the animation.\n",
-    "def animate_sine(i):\n",
-    "    x = linspace(0, 2, 1000)\n",
-    "    y = sin(2 * pi * (x - 0.01 * i))\n",
-    "    line.set_data(x, y)\n",
-    "    text.set_text('frame: {0}'.format(i))\n",
-    "    return(line, text)"
+    "# Change the animate_sine() function in this cell, and rerender the animation.\n"
    ]
   },
   {
@@ -365,8 +352,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import gapminder data in this cell\n",
-    "gapminder = pd.read_csv(\"../../data/gapminder.tab\", sep=\"\\t\")"
+    "# Import gapminder data in this cell\n"
    ]
   },
   {
@@ -392,11 +378,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Create gm2002 data subset here, and inspect it\n",
-    "gm2002 = gapminder.loc[gapminder['year']==2002,]"
+    "# Create gm2002 data subset here, and inspect it\n"
    ]
   },
   {
@@ -406,17 +393,17 @@
     "We'll piece together creation of a bubble plot showing life expectancy against GDP. First we need to set up a `figure()` and subplot axes, which we do as `fig2002` and `ax2002`:\n",
     "\n",
     "```python\n",
-    "fig2002 = figure(figsize=(12, 9))\n",
+    "fig2002 = plt.figure(figsize=(12, 9))\n",
     "ax2002 = fig2002.add_subplot(1, 1, 1)\n",
     "```\n",
     "\n",
     "To set axes limits, we'll add a little buffer beyond the minimum and maximum values for both GDP and life expectancy, so that we can accommodate some of the larger bubbles. We use `ax2002.set_xlim()` and `ax2002.set_ylim`, passing values derived from our dataset directly to set the limits:\n",
     "\n",
     "```python\n",
-    "ax2002.set_xlim(floor(gm2002['gdpPercap'].min()) - 3000,\n",
-    "                floor(gm2002['gdpPercap'].max()) + 1000)\n",
-    "ax2002.set_ylim(floor(gm2002['lifeExp'].min()) - 10,\n",
-    "                floor(gm2002['lifeExp'].max()) + 10)\n",
+    "ax2002.set_xlim(np.floor(gm2002['gdpPercap'].min()) - 3000,\n",
+    "                np.floor(gm2002['gdpPercap'].max()) + 1000)\n",
+    "ax2002.set_ylim(np.floor(gm2002['lifeExp'].min()) - 10,\n",
+    "                np.floor(gm2002['lifeExp'].max()) + 10)\n",
     "```\n",
     "\n",
     "We set axis labels in the same way:\n",
@@ -436,7 +423,7 @@
     "The resulting dictionary is placed in the variable `cmap`:\n",
     "\n",
     "```python\n",
-    "continents = unique(gm2002['continent'])\n",
+    "continents = np.unique(gm2002['continent'])\n",
     "cmap = dict(zip(continents, sns.color_palette()))\n",
     "```\n",
     "\n",
@@ -467,26 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Render a static scatterplot in this cell\n",
-    "fig2002 = figure(figsize=(12, 9))\n",
-    "ax2002 = fig2002.add_subplot(1, 1, 1)\n",
-    "ax2002.set_xlim(floor(gm2002['gdpPercap'].min()) - 3000,\n",
-    "                floor(gm2002['gdpPercap'].max()) + 1000)\n",
-    "ax2002.set_ylim(floor(gm2002['lifeExp'].min()) - 10,\n",
-    "                floor(gm2002['lifeExp'].max()) + 10)\n",
-    "ax2002.set_xlabel('GDP per capita/$US\\nBubble size: population\\nYEAR: 2002')\n",
-    "ax2002.set_ylabel('life expectancy/yr')\n",
-    "continents = unique(gm2002['continent'])\n",
-    "cmap = dict(zip(continents, sns.color_palette()))\n",
-    "colors = [cmap[con] for con in gm2002['continent']]\n",
-    "sizes = gm2002['pop'] * 1e-5\n",
-    "for continent in continents:\n",
-    "    data = gm2002.loc[gm2002['continent'] == continent,]\n",
-    "    sizes = data['pop'] * 1e-5\n",
-    "    ax2002.scatter(data['gdpPercap'], data['lifeExp'],\n",
-    "                   s=sizes,\n",
-    "                   alpha=0.5,\n",
-    "                   c=cmap[continent])"
+    "# Render a static scatterplot in this cell\n"
    ]
   },
   {
@@ -498,13 +466,13 @@
     "Animating our data, the first thing to do is generate 'clean' base axes, setting axis limits on the basis of the complete `gapminder` dataset, and adding axes labels:\n",
     "\n",
     "```python\n",
-    "figgdp = figure(figsize=(12, 9))\n",
+    "figgdp = plt.figure(figsize=(12, 9))\n",
     "axgdp = figgdp.add_subplot(1, 1, 1)\n",
     "\n",
-    "axgdp.set_xlim(floor(gapminder['gdpPercap'].min()) - 10000,\n",
+    "axgdp.set_xlim(np.floor(gapminder['gdpPercap'].min()) - 10000,\n",
     "               60000)\n",
-    "axgdp.set_ylim(floor(gapminder['lifeExp'].min()) - 10,\n",
-    "               floor(gapminder['lifeExp'].max()) + 10)\n",
+    "axgdp.set_ylim(np.floor(gapminder['lifeExp'].min()) - 10,\n",
+    "               np.floor(gapminder['lifeExp'].max()) + 10)\n",
     "\n",
     "ax2002.set_xlabel('GDP per capita/$US\\nBubble size: population')\n",
     "ax2002.set_ylabel('life expectancy/yr')\n",
@@ -517,17 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the clean base axes in this cell\n",
-    "figgdp = figure(figsize=(12, 9))\n",
-    "axgdp = figgdp.add_subplot(1, 1, 1)\n",
-    "\n",
-    "axgdp.set_xlim(floor(gapminder['gdpPercap'].min()) - 10000,\n",
-    "               60000)\n",
-    "axgdp.set_ylim(floor(gapminder['lifeExp'].min()) - 10,\n",
-    "               floor(gapminder['lifeExp'].max()) + 10)\n",
-    "\n",
-    "ax2002.set_xlabel('GDP per capita/$US\\nBubble size: population')\n",
-    "ax2002.set_ylabel('life expectancy/yr')"
+    "# Create the clean base axes in this cell\n"
    ]
   },
   {
@@ -557,14 +515,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Initialise the scatterplot data in this cell\n",
-    "data = gapminder.loc[gapminder['year'] == 1952,]\n",
-    "sizes = data['pop'] * 1e-5\n",
-    "colors = [cmap[con] for con in data['continent']]\n",
-    "scat = axgdp.scatter(data['gdpPercap'], data['lifeExp'], s=sizes, c=colors, alpha=0.5)"
+    "# Initialise the scatterplot data in this cell\n"
    ]
   },
   {
@@ -617,11 +573,11 @@
     "```python\n",
     "def update_gdp(frame_number):\n",
     "    # Get year and data to be rendered\n",
-    "    year = unique(gapminder['year'])[frame_number]\n",
+    "    year = np.unique(gapminder['year'])[frame_number]\n",
     "    data = gapminder.loc[gapminder['year'] == year,]\n",
     "    \n",
     "    # Update scatterplot location data\n",
-    "    plotdata = transpose(asarray((data['gdpPercap'], data['lifeExp'])))\n",
+    "    plotdata = np.transpose(np.asarray((data['gdpPercap'], data['lifeExp'])))\n",
     "    scat.set_offsets(plotdata)\n",
     "    \n",
     "    # Update scatterplot sizes and axis label\n",
@@ -640,25 +596,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create the initialisation and update functions in this cell\n",
-    "def init_gdp():\n",
-    "    scat.set_offsets([])\n",
-    "    return(scat,)\n",
-    "\n",
-    "def update_gdp(frame_number):\n",
-    "    # Get year and data to be rendered\n",
-    "    year = unique(gapminder['year'])[frame_number]\n",
-    "    data = gapminder.loc[gapminder['year'] == year,]\n",
-    "\n",
-    "    # Update scatterplot location data\n",
-    "    plotdata = transpose(asarray((data['gdpPercap'], data['lifeExp'])))\n",
-    "    scat.set_offsets(plotdata)\n",
-    "\n",
-    "    # Update scatterplot sizes and axis label\n",
-    "    scat.set_sizes(data['pop'] * 1e-5)\n",
-    "    axgdp.set_xlabel('GDP per capita/$US\\nBubble size: population\\nYEAR: {0}'.format(year))\n",
-    "\n",
-    "    return(scat,)"
+    "# Create the initialisation and update functions in this cell\n"
    ]
   },
   {
@@ -679,9 +617,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Render the animation in this cell\n",
-    "anim_gdp=animation.FuncAnimation(figgdp, update_gdp, init_func=init_gdp, frames=12, interval=500)\n",
-    "HTML(anim_gdp.to_html5_video())"
+    "# Render the animation in this cell\n"
    ]
   },
   {
@@ -724,7 +660,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Write the bubble chart animation to file\n"
@@ -747,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
